# cot.config.ingest

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/cot/config/: __init__.py
testing/: test_basic_usage.py
